--- a/app.json
+++ b/app.json
@@ -1,54 +1,67 @@
 {
-    "expo": {
-      "name": "swiftspace",
-      "slug": "swiftspace",
-      "version": "1.0.0",
-      "orientation": "portrait",
-      "icon": "./assets/images/icon.png",
-      "scheme": "myapp",
-      "userInterfaceStyle": "automatic",
-      "newArchEnabled": true,
-      "ios": {
-        "supportsTablet": true
+  "expo": {
+    "name": "swiftspace",
+    "slug": "swiftspace",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.swiftspace"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/icon.png",
+        "backgroundColor": "#ffffff"
       },
-      "android": {
-        "adaptiveIcon": {
-          "foregroundImage": "./assets/images/icon.png",
-          "backgroundColor": "#ffffff"
-        }
-      },
-      "web": {
-        "bundler": "metro",
-        "output": "static",
-        "favicon": "./assets/images/favicon.png"
-      },
-      "plugins": [
-        "expo-router",
-        [
-          "expo-splash-screen",
-          {
-            "image": "./assets/images/splash-icon.png",
-            "resizeMode": "cover",
-            "backgroundColor": "#ffffff",
-            "enableFullScreenImage_legacy": true
-          }
-        ],
-        [
-          "expo-font",
-          {
-            "fonts": [
-              "./assets/fonts/Rubik-Bold.ttf",
-              "./assets/fonts/Rubik-ExtraBold.ttf",
-              "./assets/fonts/Rubik-Light.ttf",
-              "./assets/fonts/Rubik-Medium.ttf",
-              "./assets/fonts/Rubik-Regular.ttf",
-              "./assets/fonts/Rubik-SemiBold.ttf"
-            ]
-          }
-        ]
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
       ],
-      "experiments": {
-        "typedRoutes": true
-      }
+      "package": "com.anonymous.swiftspace"
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash-icon.png",
+          "resizeMode": "cover",
+          "backgroundColor": "#ffffff",
+          "enableFullScreenImage_legacy": true
+        }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/Rubik-Bold.ttf",
+            "./assets/fonts/Rubik-ExtraBold.ttf",
+            "./assets/fonts/Rubik-Light.ttf",
+            "./assets/fonts/Rubik-Medium.ttf",
+            "./assets/fonts/Rubik-Regular.ttf",
+            "./assets/fonts/Rubik-SemiBold.ttf"
+          ]
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "SwiftSpace needs access to your photos to let you upload property images.",
+          "cameraPermission": "SwiftSpace needs access to your camera to let you take property photos.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ]
+    ],
+    "experiments": {
+      "typedRoutes": true
     }
   }
+}
